tests/snapshots/installer-screen__leave.snap
---
source: src/tests/screens.rs
---
Buffer {
    area: Rect { x: 0, y: 0, width: 80, height: 50 },
    content: [
        "                                                                                ",
        "                                                                                ",
        "                                                                                ",
        "                                                                                ",
        "                                                                                ",
        "╭─ Leave the installer? ───────────────────────────────────────────────────────╮",
        "│                                                                              │",
        "│                                                                              │",
        "│                                                                              │",
        "│                                                                              │",
        "│                                                                              │",
        "│                                                                              │",
        "│                                                                              │",
        "│                                                                              │",
        "│                                                                              │",
        "│                                                                              │",
        "│                                                                              │",
        "│                                                                              │",
        "│                                                                              │",
        "│                                                                              │",
        "│                                                                              │",
        "│                                                                              │",
        "│                                                                              │",
        "│                             Keep going                                       │",
        "│                             Start the form again                             │",
        "│                           > Quit the installer                               │",
        "│                                                                              │",
        "│                                                                              │",
        "│                                                                              │",
        "│                                                                              │",
        "│                                                                              │",
        "│                                                                              │",
        "│                                                                              │",
        "│                                                                              │",
        "│                                                                              │",
        "│                                                                              │",
        "│                                                                              │",
        "│                                                                              │",
        "│                                                                              │",
        "│                                                                              │",
        "│                                                                              │",
        "│                                                                              │",
        "│                                                                              │",
        "│                                                                              │",
        "╰─ ↑↓ navigate • ⏎  select ────────────────────────────────────────────────────╯",
        "                                                                                ",
        "                                                                                ",
        "                                                                                ",
        "                                                                                ",
        "                                                                                ",
    ],
    styles: [
        x: 0, y: 0, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 0, y: 5, fg: Rgb(90, 86, 224), bg: Reset, underline: Reset, modifier: NONE,
        x: 3, y: 5, fg: Rgb(90, 86, 224), bg: Reset, underline: Reset, modifier: BOLD,
        x: 23, y: 5, fg: Rgb(90, 86, 224), bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 6, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 79, y: 6, fg: Rgb(90, 86, 224), bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 7, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 79, y: 7, fg: Rgb(90, 86, 224), bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 8, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 79, y: 8, fg: Rgb(90, 86, 224), bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 9, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 79, y: 9, fg: Rgb(90, 86, 224), bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 10, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 79, y: 10, fg: Rgb(90, 86, 224), bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 11, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 79, y: 11, fg: Rgb(90, 86, 224), bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 12, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 79, y: 12, fg: Rgb(90, 86, 224), bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 13, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 79, y: 13, fg: Rgb(90, 86, 224), bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 14, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 79, y: 14, fg: Rgb(90, 86, 224), bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 15, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 79, y: 15, fg: Rgb(90, 86, 224), bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 16, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 79, y: 16, fg: Rgb(90, 86, 224), bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 17, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 79, y: 17, fg: Rgb(90, 86, 224), bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 18, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 79, y: 18, fg: Rgb(90, 86, 224), bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 19, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 79, y: 19, fg: Rgb(90, 86, 224), bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 20, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 79, y: 20, fg: Rgb(90, 86, 224), bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 21, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 79, y: 21, fg: Rgb(90, 86, 224), bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 22, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 79, y: 22, fg: Rgb(90, 86, 224), bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 23, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 79, y: 23, fg: Rgb(90, 86, 224), bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 24, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 79, y: 24, fg: Rgb(90, 86, 224), bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 25, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 28, y: 25, fg: Rgb(238, 111, 248), bg: Reset, underline: Reset, modifier: BOLD,
        x: 52, y: 25, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 79, y: 25, fg: Rgb(90, 86, 224), bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 26, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 79, y: 26, fg: Rgb(90, 86, 224), bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 27, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 79, y: 27, fg: Rgb(90, 86, 224), bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 28, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 79, y: 28, fg: Rgb(90, 86, 224), bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 29, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 79, y: 29, fg: Rgb(90, 86, 224), bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 30, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 79, y: 30, fg: Rgb(90, 86, 224), bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 31, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 79, y: 31, fg: Rgb(90, 86, 224), bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 32, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 79, y: 32, fg: Rgb(90, 86, 224), bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 33, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 79, y: 33, fg: Rgb(90, 86, 224), bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 34, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 79, y: 34, fg: Rgb(90, 86, 224), bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 35, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 79, y: 35, fg: Rgb(90, 86, 224), bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 36, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 79, y: 36, fg: Rgb(90, 86, 224), bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 37, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 79, y: 37, fg: Rgb(90, 86, 224), bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 38, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 79, y: 38, fg: Rgb(90, 86, 224), bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 39, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 79, y: 39, fg: Rgb(90, 86, 224), bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 40, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 79, y: 40, fg: Rgb(90, 86, 224), bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 41, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 79, y: 41, fg: Rgb(90, 86, 224), bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 42, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 79, y: 42, fg: Rgb(90, 86, 224), bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 43, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 79, y: 43, fg: Rgb(90, 86, 224), bg: Reset, underline: Reset, modifier: NONE,
        x: 3, y: 44, fg: DarkGray, bg: Reset, underline: Reset, modifier: NONE,
        x: 26, y: 44, fg: Rgb(90, 86, 224), bg: Reset, underline: Reset, modifier: NONE,
        x: 0, y: 45, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
    ]
}
